# pyadb

./: .gitignore  README.md  ex_screenshot.bat  setup.cfg  task.md
src/pyadb/: __main__.py  connect.py  console.py  screencast.py  screenshot.py  shell.py
