[metadata]
name = pyadb
long_description = file: README.MD
license = MIT
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
packages = 
    pyadb
install_requires =
    adb-shell[usb,async]
    aioconsole 
python_requires = >= 3.10
package_dir =
    =src

[options.entry_points]
console_scripts =
    screenshot = pyadb.screenshot:main
    screencast = pyadb.screencast:main

[options.extras_require]
testing = 
    pytest>=6.0
    pytest-cov>=3.0.0
    flake8>=4.0

[flake8]
max-line-length = 81